Bug fix: ContactUs x axis shadow invisible at the right

--- a/src/layout-default/components/our-partners/our-partners.scss
+++ b/src/layout-default/components/our-partners/our-partners.scss
@@ -1,9 +1,11 @@
 @import '../../../assets/styles/theme';
 
 .our-partners-container {
-  background-color: $primary !important;
-
   padding: $space 0;
+
+  overflow-x: hidden;
+
+  background-color: $primary !important;
 }
 
 .our-partners-logo-box {
